objects/CSS_WS_Failure__c.object
<CustomObject>
    <fields>
        <fullName>CSS_WS_ComponentCode__c</fullName>
        <label>Engine Component Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ComponentName__c</fullName>
        <label>Engine Component</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_EngineSystemCode__c</fullName>
        <label>Engine System Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_EngineSystemCompleteName__c</fullName>
        <label>Failure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_EngineSystem__c</fullName>
        <label>Engine System</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_FailureModeCode__c</fullName>
        <label>Failure Mode Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_FailureModeName__c</fullName>
        <label>Failure Mode</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Failure_ID__c</fullName>
        <label>Failure ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Failure_Master_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS WS Failure Master</label>
        <referenceTo>CSS_WS_Failure_Master__c</referenceTo>
        <relationshipLabel>CSS WS Failures</relationshipLabel>
        <relationshipName>CSS_WS_Failures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Failure_Name__c</fullName>
        <label>Failure Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Warranty__c</fullName>
        <label>CSS_WS_Warranty</label>
        <referenceTo>CSS_WS_Warranty__c</referenceTo>
        <relationshipLabel>CSS WS Failures</relationshipLabel>
        <relationshipName>CSS_WS_FailureW</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CSS WS Failure</label>
    <nameField>
        <label>SF Failure ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS WS Failures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>